--- a/package/package.json
+++ b/package/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.1.1",
     "lucide-react": "^0.368.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.1",
     "next-themes": "^0.3.0",
     "react": "^18",
