--- a/package/package.json
+++ b/package/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.1.1",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.368.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.1",
